<resources>
    <string name="app_name">IntelliMind</string>
    <string name="query">query</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="commands">Commands</string>
    <string name="search">Search</string>
    <string name="stop">Stop</string>
    <string name="ask_me_anything">Ask Me Anything</string>
    <string name="recent">Recent</string>
</resources>
