<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/cons"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:id="@+id/back"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">
    </ImageButton>

    <TextView
        app:layout_constraintTop_toTopOf="@+id/cons"
        android:layout_width="wrap_content"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:id="@+id/settings"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/language"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        android:id="@+id/lang"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
    </TextView>


    <TextView
        android:id="@+id/commands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/commands"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/search"
        android:id="@+id/searchtext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commands"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/stop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchtext"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
    </TextView>

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:id="@+id/language"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.AppCompatSpinner>

    <Switch
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/commands"
        app:layout_constraintRight_toRightOf="@+id/cons"
        android:layout_gravity="end"
        android:id="@+id/search"
        android:layout_height="wrap_content">
    </Switch>

    <Switch
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/stop"
        app:layout_constraintTop_toBottomOf="@+id/searchtext"
        app:layout_constraintRight_toRightOf="@+id/cons"
        android:layout_gravity="end"
        android:layout_height="wrap_content">
    </Switch>

</androidx.constraintlayout.widget.ConstraintLayout>
